<resources>
    <string name="app_name">coffee-app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_title">CoffeApp</string>
    <string name="medium_size">Medium</string>
    <string name="small_size">Small</string>
    <string name="large_size">Large</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="not_feeling_very_good_n_n">Not feeling very good \n\n:(</string>
    <string name="just_another_day_n_n">Just another day \n\n:|</string>
    <string name="i_m_feeling_great_n_n">I\'m feeling great \n\n:)</string>
    <string name="i_m_ready">I\'M READY</string>
    <string name="very_productive">Very productive!!</string>
    <string name="not_very_productive">Not very productive...</string>
    <string name="how_was_work_today">How was work today?</string>
    <string name="what_size_of_cup">What size of cup did you have?</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="a_normal_day">A normal day</string>
    <string name="back">BACK</string>
    <string name="do_you_want_to_register_more_coffees">Do you want to register more coffees?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_the_answers">Register the answers?</string>
    <string name="overall_view">Overall view</string>
    <string name="pick">Pick</string>
    <string name="how_many_did_you_take_that_size">How many did you take that size?</string>
    <string name="go_to_landing_activity">Go to landing activity</string>
    <string name="go_to_overall_view">Go to overall view</string>
    <string name="notification_title">CoffeeApp</string>
    <string name="notification_greeting_msg">Thank you for registering your daily coffees!</string>




</resources>