<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoffeeSize">

    <TextView
        android:id="@+id/txt_coffee_size_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/what_size_of_cup"
        android:textSize="20sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_large_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:background="@drawable/welcome_text_style"
        android:text="@string/large_size"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btn_medium_size"-->
    <!--        app:layout_constraintVertical_bias="1.0" />-->

    <Button
        android:id="@+id/btn_medium_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/medium_size"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/welcome_text_style"/>

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btn_small_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@drawable/welcome_text_style"
        android:text="@string/small_size"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>
<!--        app:layout_constraintBottom_toTopOf="@+id/btn_medium_size"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.666" />-->



    <Button
        android:id="@+id/btn_back_from_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/colorMainTest"
        android:text="@string/back"
        android:textColor="#000000"/>


</androidx.appcompat.widget.LinearLayoutCompat>