<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfirmDenyActivity">

    <TextView
        android:id="@+id/txt_coffee_size_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.25"
        android:background="@color/colorMainTheme"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/how_many_did_you_take_that_size"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btn_back_from_amount"
        android:layout_width="363dp"
        android:layout_height="49dp"
        android:background="@color/colorMainTest"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <NumberPicker
        android:id="@+id/np_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:background="@color/colorMainTest"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_from_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_coffee_size_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_pick_amount"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:background="@color/colorLargeSize"
        android:text="@string/pick"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_from_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_coffee_size_title"
        app:layout_constraintVertical_bias="0.884" />
</androidx.constraintlayout.widget.ConstraintLayout>